<resources>

    <!-- Main Activity -->
    <string name="app_name">Loading App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="no_selection_warning">Please Select A File To Download</string>
    <string name="loading">Loading</string>
    <string name="download">Download</string>
    <string name="cloud_image_content_desc">Cloud Download Image</string>
    <string name="glide_radio_button_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp_radio_button_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="view_details">View Details</string>

    <!-- Details Activity -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_details">Download Details</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="okay_button">Okay</string>


</resources>
